Added alerting thresholds for the missing models

--- a/app/views/daily_sales_report/_sales_report.html.erb
+++ b/app/views/daily_sales_report/_sales_report.html.erb
@@ -21,12 +21,29 @@
       <tbody class="divide-y divide-gray-200 bg-white">
         <% @sales_data[:stores].each do |store_name, data| %>
             <tr>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= store_name %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= @sales_data["#{store_name}_totals"][:starting_inventory] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= @sales_data["#{store_name}_totals"][:total_sale] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= @sales_data["#{store_name}_totals"][:end_of_day_inventory] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= currency @sales_data["#{store_name}_totals"][:revenue] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= currency @sales_data["#{store_name}_totals"][:profit] %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">
+                <%= store_name %>
+              </td>
+
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">
+                <%= @sales_data["#{store_name}_totals"][:starting_inventory] %>
+              </td>
+
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6 <%= @system_configuration.alerting_daily_per_store_sale >= @sales_data["#{store_name}_totals"][:total_sale] ? 'bg-red-500' : '' %>">
+                <%= @sales_data["#{store_name}_totals"][:total_sale] %>
+              </td>
+
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6 <%= @system_configuration.alerting_daily_per_store_inventory >= @sales_data["#{store_name}_totals"][:end_of_day_inventory] ? 'bg-red-500' : '' %>">
+                <%= @sales_data["#{store_name}_totals"][:end_of_day_inventory] %>
+              </td>
+
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">
+                <%= currency @sales_data["#{store_name}_totals"][:revenue] %>
+              </td>
+
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">
+                <%= currency @sales_data["#{store_name}_totals"][:profit] %>
+              </td>
             </tr>
         <% end %>
       </tbody>
@@ -62,8 +79,8 @@
             <tr>
               <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= flavor_name %></td>
               <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:starting_inventory] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:total_sale] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:end_of_day_inventory] %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6 <%= @system_configuration.alerting_daily_sale >= data[:total_sale] ? 'bg-red-500' : '' %>"><%= data[:total_sale] %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6 <%= @system_configuration.alerting_daily_inventory >= data[:end_of_day_inventory] ? 'bg-red-500' : '' %>"><%= data[:end_of_day_inventory] %></td>
               <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= currency data[:revenue] %></td>
               <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= currency data[:profit] %></td>
             </tr>
@@ -102,8 +119,8 @@
             <tr>
               <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= flavor_name %></td>
               <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:starting_inventory] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:total_sale] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:end_of_day_inventory] %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6 <%= @system_configuration.alerting_daily_sale >= data[:total_sale] ? 'bg-red-500' : '' %>"><%= data[:total_sale] %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6 <%= @system_configuration.alerting_daily_inventory >= data[:end_of_day_inventory] ? 'bg-red-500' : '' %>"><%= data[:end_of_day_inventory] %></td>
               <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= currency data[:revenue] %></td>
               <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= currency data[:profit] %></td>
             </tr>
