--- a/app/views/system_configurations/_form.html.erb
+++ b/app/views/system_configurations/_form.html.erb
@@ -25,8 +25,28 @@
     </div>
 
     <div class="my-5">
+      <%= form.label :alerting_daily_sale %>
+      <%= form.text_field :alerting_daily_sale, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    </div>
+
+    <div class="my-5">
+      <%= form.label :alerting_daily_per_store_sale %>
+      <%= form.text_field :alerting_daily_per_store_sale, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    </div>
+
+    <div class="my-5">
       <%= form.label :alerting_production %>
       <%= form.text_field :alerting_production, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    </div>
+
+    <div class="my-5">
+      <%= form.label :alerting_daily_inventory %>
+      <%= form.text_field :alerting_daily_inventory, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    </div>
+
+    <div class="my-5">
+      <%= form.label :alerting_daily_per_store_inventory %>
+      <%= form.text_field :alerting_daily_per_store_inventory, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
     </div>
 
     <div class="my-5">
