--- a/app/views/system_configurations/show.html.erb
+++ b/app/views/system_configurations/show.html.erb
@@ -24,20 +24,6 @@
             </div>
 
             <div class="border p-2 col-span-1">
-              <span class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Alerting Daily Sale</span>
-            </div>
-            <div class="border p-2 col-span-1">
-              <span class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= @system_configuration.alerting_daily_sale %></span>
-            </div>
-
-            <div class="border p-2 col-span-1">
-              <span class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Alerting Per Store Daily Sale</span>
-            </div>
-            <div class="border p-2 col-span-1">
-              <span class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= @system_configuration.alerting_daily_per_store_sale %></span>
-            </div>
-
-            <div class="border p-2 col-span-1">
               <span class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Alerting Production</span>
             </div>
             <div class="border p-2 col-span-1">
@@ -45,17 +31,10 @@
             </div>
 
             <div class="border p-2 col-span-1">
-              <span class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Alerting Daily Inventory</span>
+              <span class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Alerting Inventory</span>
             </div>
             <div class="border p-2 col-span-1">
-              <span class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= @system_configuration.alerting_daily_inventory %></span>
-            </div>
-
-            <div class="border p-2 col-span-1">
-              <span class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Alerting Daily Per Store Inventory</span>
-            </div>
-            <div class="border p-2 col-span-1">
-              <span class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= @system_configuration.alerting_daily_per_store_inventory %></span>
+              <span class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= @system_configuration.alerting_inventory %></span>
             </div>
 
             <div class="border p-2 col-span-1">
