--- a/app/views/daily_sales_report/_sales_report.html.erb
+++ b/app/views/daily_sales_report/_sales_report.html.erb
@@ -137,6 +137,7 @@
           </thead>
           <tbody class="divide-y divide-gray-200 bg-white">
             <% flavors.each do |flavor_name, data| %>
+              <% next if data[:production_quantity].zero? %>
               <tr>
                 <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= inventory_name %></td>
                 <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= flavor_name %></td>
