Title minor change

--- a/app/views/daily_sales_report/_sales_report.html.erb
+++ b/app/views/daily_sales_report/_sales_report.html.erb
@@ -126,7 +126,7 @@
   <% Inventory.all.each do |inventory| %>
     <div class="border p-4 my-2">
       <% @sales_data[:inventories].each do |inventory_name, flavors| %>
-        <h2 class="text-xl font-bold mb-4">Flavor Productions at: <%= inventory.name %></h2>
+        <h2 class="text-xl font-bold mb-4">Productions at: <%= inventory.name %></h2>
         <table class="min-w-full divide-y divide-gray-300">
           <thead class="bg-gray-50">
             <tr>
