--- a/app/views/flavors/index.html.erb
+++ b/app/views/flavors/index.html.erb
@@ -51,6 +51,11 @@
                 <% end %>
               </tbody>
             </table>
+            <div class="border-t border-gray-300">
+              <div class="m-5 flex place-content-center">
+                <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
+              </div>
+            </div>
           </div>
         </div>
       </div>
