--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -25,6 +25,11 @@
               </div>
             </tbody>
           </table>
+          <div class="border-t border-gray-300">
+            <div class="m-5 flex place-content-center">
+              <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
