--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,6 +21,9 @@
               <%= render @users %>
             </tbody>
           </table>
+          <div class="m-5 flex place-content-center">
+            <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
+          </div>
         </div>
       </div>
     </div>
