--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,7 @@
   <body>
     <%= render '/shared/navbar' if current_user %>
     <main class="container mx-auto mt-28 px-5 flex flex-col">
-
-      <% if flash[:notice].present? %>
-        <div class="notice">
-          <%= flash[:notice] %>
-        </div>
-      <% end %>
-
+      <%= render '/shared/flash' %>
       <%= yield %>
     </main>
   </body>
