Done some refactoring

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -23,16 +23,21 @@
   </div>
 
   <% if location.persisted? %>
-    <div class="my-5" data-controller="select2">
+    <div class="my-5" data-controller="locations">
       <div class="flex justify-between">
         <%= form.label :flavor_ids, "Select Flavors" %>
-        <div><input type="checkbox" id="select-all-checkbox" class="mr-1 rounded" data-action="change->select2#selectAllOptions" >Select All</div>
+        <div><input type="checkbox" id="select-all-checkbox" class="mr-1 rounded" data-action="change->locations#selectAllOptions" >Select All</div>
       </div>
-      <%= form.select :flavor_ids, options_for_select(flavor_options_for_select(location), selected: location.flavor_ids), { include_blank: 'Select Flavors' }, 
-      { multiple: true, id: 'select-tag-id', class: "select2 block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" } %>
+      <div class="h-72 overflow-y-auto border border-gray-300 rounded p-2">
+        <%= collection_check_boxes(:location, :flavor_ids, flavor_options_for_select, :id, :name, { item_wrapper_class: 'my-2' }) do |c_box| %>
+          <div class="flex items-center my-2">
+            <%= c_box.check_box(data: { locations_target: "flavorCheckBox" }, class: 'mr-2 h-5 w-5 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500') %>
+            <%= c_box.label(class: 'text-sm') %>
+          </div>
+        <% end %>
+      </div>
     </div>
   <% end %>
-
 
   <div class="inline">
     <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
