Made cursor pointer

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -27,7 +27,7 @@
       <div class="flex justify-between">
         <%= form.label :flavor_ids, "Select Flavors" %>
         <div>
-          <label>
+          <label class="cursor-pointer">
             <input type="checkbox" id="select-all-checkbox" class="mr-1 rounded" data-action="change->locations#selectAllOptions">
             Select All
           </label>
