--- a/app/views/transfers/new.html.erb
+++ b/app/views/transfers/new.html.erb
@@ -1,7 +1,10 @@
 <%= render "shared/errors", errors: @errors %>
 <div class="my-5 grid grid-cols-4 gap-2 text-left">
   <div class="col-span-2 py-3 text-base border-b border-gray-200">
-    <h3 class="text-xl">Flavor Name</h3>
+    <h3 class="text-xl">Flavors</h3>
+    <span class="text-xs text-gray-500">
+      (available at <%= @to_location.name %>)
+    </span>
   </div>
   <div class="col-span-2 py-3 border-b border-gray-200">
     <h3 class="text-xl">Quantity</h3>
