--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -18,6 +18,7 @@
 
     <div class="inline flex justify-between">
       <%= button_to "Destroy this location", location_path(@location), method: :delete, data: { turbo_confirm: 'Are you sure?' }, class: "ml-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-5 rounded" %>
+    <%= link_to 'Edit this location', edit_location_path(@location), class: "ml-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-5 rounded" %>
       <%= link_to 'Back to locations', locations_path, class: "ml-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-5 rounded" %>
     </div>
   </div>
